--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ catboost_info/
 .DS_Store
 datasets/
 .ipynb_checkpoints/
+
+**/*.csv
+**/catboost_info/
+**/.DS_Store
+**/datasets/
+**/.ipynb_checkpoints/
